<resources>
    <string name="app_name">TrackingApp</string>
    <string name="title_activity_logic_screen">LogicScreen</string>
    <string name="truck_text">Enter your truck number and phone number for OTP verification.</string>
    <string name="truck_number_text">Login with your truck number</string>
    <string name="truck_number">X122222</string>
    <string name="truck_otp">91XXXXXXXX</string>
    <string name="str_continue">Continue</string>
    <string name="str_verify">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="an_error_occurred">Truck Tracking server is down, Kindly contact your IS Team.</string>
    <string name="warning_title">Warning</string>
    <string name="success_title">Success</string>
    <string name="connectivity_error_message">Ignore battery optimization.</string>
    <string name="end_trip">Do you want to end the trip?</string>
    <string name="terminate_trip">Do you want to terminate the trip?</string>
    <string name="timeout_error_message">Request timed out. Please try again with an active network connection.</string>
    <string name="loading">Loading</string>
    <string name="track_shared_preferences">TRACK_SHARED_PREFERENCES</string>
    <string name="start">Start</string>
    <string name="destination_Name">destination Location :</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBP1yrKZa1k6dpfEeoTguvXFY5-hUo4I54</string>
    <string name="verification_text">Verification</string>
    <string name="otp_text">Enter OTP code </string>
    <string name="pin_number">X</string>
    <string name="end">End Trip</string>
    <string name="terminate">Terminate Trip</string>
    <string name="thank_you">Thank you</string>
    <string name="trip">Your trip has been completed successfully</string>
    <string name="cancel_trip">Your trip has been terminated </string>
    <string name="back_button">Back to Truck Login</string>
</resources>