<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.OtpScreen">
    <data>
        <variable
            name="viewModel"
            type="com.lediya.trackingapp.viewmodel.LoginViewModel" />
    </data>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:contentDescription="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_long_truck" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/truck_number_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/nissan_brand_bold"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:layout_marginTop="5dp"
            android:text="@string/truck_text"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="@font/nissan_brand_regular"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="48dp"
            android:layout_marginRight="48dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="3dp"
            app:layout_constraintTop_toBottomOf="@+id/textLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/truckNumberText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:maxLines="1"
                    android:maxLength="12"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/phoneText"
                    android:background="@drawable/rectangle_border"
                    android:fontFamily="@font/nissan_brand_regular"
                    android:hint="@string/truck_number"
                    android:singleLine="true"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phoneText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:nextFocusDown="@id/continueButton"
                    android:background="@drawable/rectangle_border"
                    android:fontFamily="@font/nissan_brand_regular"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:hint="@string/truck_otp"
                    android:singleLine="true"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/truckNumberText" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/continueButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/button_color"
                    android:onClick="onContinueClick"
                    android:text="@string/str_continue"
                    android:fontFamily="@font/nissan_brand_regular"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phoneText" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:indeterminateTintMode="src_atop"
                    android:indeterminateTint="@color/yellow_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.311" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>