<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semi_transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            app:layout_constraintVertical_bias="0.3"
            android:background="@drawable/rounded_corner_button_default">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/dialog_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintWidth_percent="0.8"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:paddingStart="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/warning_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:fontFamily="@font/nissan_brand_bold"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingLeft="30dp" />

                <ImageButton
                    android:id="@+id/close_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintWidth_percent="0.2"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/ic_close_icon"
                    android:scaleType="fitXY"
                    android:backgroundTint="@color/close_button_color"
                    android:layout_marginRight="30dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    app:layout_constraintTop_toBottomOf="@+id/dialog_title"
                    android:background="@color/colorSecondaryText"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/title_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dialog_message"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/an_error_occurred"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:fontFamily="@font/nissan_brand_regular"
                    android:gravity="start|center_vertical"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp"
                    android:textAlignment="viewStart" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dialog_message"
                    android:layout_margin="20dp"
                    android:layout_marginTop="5dp">

                    <Button
                        android:id="@+id/confirm_button"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/cancel_button"
                        android:clickable="true"
                        android:text="@string/confirm"
                        android:textAllCaps="false"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:focusable="true"
                        android:background="@drawable/rounded_corner_no_apply_button"
                        android:layout_marginRight="10dp" />

                    <Button
                        android:id="@+id/cancel_button"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:clickable="true"
                        android:text="@string/cancel"
                        android:padding="5dp"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:focusable="true"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/rounded_corner_no_apply_button"
                        android:layout_marginRight="20dp" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>