<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.HomeScreen">
    <data>
        <variable
            name="viewModel"
            type="com.lediya.trackingapp.viewmodel.HomeViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
      />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/yellow_color"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintBottom_toBottomOf="@+id/map"
       />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:id="@+id/layout"
        android:background="@drawable/rounded_corner_button_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/locationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:maxLines="1"
            android:fontFamily="@font/nissan_brand_regular"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="5dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onStartTrip"
            android:fontFamily="@font/nissan_brand_regular"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/button_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="10dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="10dp"
        android:id="@+id/layout2"
        android:background="@drawable/rounded_corner_button_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/locationNameStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:maxLines="1"
            android:fontFamily="@font/nissan_brand_regular"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="5dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelButton"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:text="@string/terminate"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:onClick="onCancelTrip"
            android:fontFamily="@font/nissan_brand_regular"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/endLocationNameStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:maxLines="1"
            android:fontFamily="@font/nissan_brand_regular"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationNameStr"
            android:layout_marginLeft="5dp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/endButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/end"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:onClick="onEndTrip"
            android:fontFamily="@font/nissan_brand_regular"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_color"
            app:layout_constraintStart_toStartOf="@+id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancelButton"
            android:layout_marginRight="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>